components/mastodon/mastodon-streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  namespace: mastodon
spec:
  selector:
    app: mastodon-streaming
  ports:
  - name: streaming
    port: 4000
    targetPort: 4000
  type: ClusterIP
