components/mastodon/mastodon-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-web
  namespace: mastodon
spec:
  selector:
    app: mastodon-web
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
