components/mastodon/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-postgres
  namespace: mastodon
spec:
  selector:
    app: mastodon-postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
